--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -8,7 +8,7 @@
             <p class="text-center">Images</p>
           </div>
         </div>
-        <img class="thumbnail" src="http://placehold.it/500x500.png">
+        <img class="thumbnail" src="https://placehold.it/500x500.png">
       </a>
     </div>
   </div>
@@ -20,7 +20,7 @@
             <p class="text-center">File Upload</p>
           </div>
         </div>
-        <img class="thumbnail" src="http://placehold.it/500x500.png">
+        <img class="thumbnail" src="https://thesociety.dk/images/site/original/file_upload.png">
       </a>
     </div>
   </div>
@@ -31,7 +31,7 @@
           <p class="text-center">Minecraft</p>
         </div>
       </div>
-      <img class="thumbnail" src="http://placehold.it/500x500.png">
+      <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
   <div class="small-4 columns nav-tile">
@@ -41,7 +41,7 @@
           <p class="text-center">Wiki</p>
         </div>
       </div>
-      <img class="thumbnail" src="http://placehold.it/500x500.png">
+      <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
   <div class="small-4 columns nav-tile">
@@ -51,7 +51,7 @@
           <p class="text-center">Magic</p>
         </div>
       </div>
-      <img class="thumbnail" src="http://placehold.it/500x500.png">
+      <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
   <div class="small-4 columns nav-tile">
@@ -62,7 +62,7 @@
             <p class="text-center">Subsonic</p>
           </div>
         </div>
-        <img class="thumbnail" src="http://placehold.it/500x500.png">
+        <img class="thumbnail" src="https://placehold.it/500x500.png">
       </a>
     </div>
   </div>
@@ -73,7 +73,7 @@
           <p class="text-center">API</p>
         </div>
       </div>
-      <img class="thumbnail" src="http://placehold.it/500x500.png">
+      <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
   <div class="small-4 columns nav-tile disabled">
@@ -83,7 +83,7 @@
           <p class="text-center">Unused</p>
         </div>
       </div>
-      <img class="thumbnail" src="http://placehold.it/500x500.png">
+      <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
   <div class="small-4 columns nav-tile disabled">
@@ -93,7 +93,7 @@
           <p class="text-center">Unused</p>
         </div>
       </div>
-      <img class="thumbnail" src="http://placehold.it/500x500.png">
+      <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
 </div>
