--- a/app/views/file_upload/index.html.erb
+++ b/app/views/file_upload/index.html.erb
@@ -1,1 +1,69 @@
-File upload
+<div class="row" data-equalizer data-equalize-on="medium">
+  <div class="large-6 columns" style="border: 1px; box-shadow: 0 0 0 1px rgba(0,0,0,.2);">
+    <div class="" data-equalizer-watch>
+      <div class="row">
+        <%= form_tag '/file_upload/upload', multipart: true do %>
+          <fieldset class="small-4 columns">
+            <label>Upload To
+              <select id="folder_name" name="folder_name">
+                <optgroup label="Image Folders">
+                  <% @image_folders.each do |folder| -%>
+                      <option value="<%= folder %>"><%= folder.slice(0,1).capitalize + folder.slice(1..-1) %></option>
+                  <% end -%>
+                </optgroup>
+                <optgroup label="File Folders">
+                  <% @file_folders.each do |folder| -%>
+                      <option value="<%= folder %>"><%= folder.slice(0,1).capitalize + folder.slice(1..-1) %></option>
+                  <% end -%>
+                </optgroup>
+              </select>
+            </label>
+          </fieldset>
+          <fieldset class="small-4 columns">
+            <label> Choose File </label>
+            <label for="file" class="button">Choose File</label>
+            <input type="file" id="file" name="file" class="show-for-sr">
+          </fieldset>
+          <fieldset class="small-4 columns">
+            <label> Upload File </label>
+            <input type="submit" value="Upload File" class="button" data-disable-with="Upload File">
+          </fieldset>
+        <% end %>
+      </div>
+    </div>
+  </div>
+
+  <div class="large-6 columns" style="border: 1px; box-shadow: 0 0 0 1px rgba(0,0,0,.2);">
+    <div class="" data-equalizer-watch>
+      <div class="row">
+        <%= form_tag '/file_upload/create_folder', multipart: true do %>
+          <div class="small-4 columns">
+            <label>Input Label
+              <input type="text" placeholder="Folder Name" id="folder_name" name="folder_name">
+            </label>
+          </div>
+          <fieldset class="small-4 columns">
+            <label>Folder Type</label>
+            <input type="radio" name="folder_type" value="file_folder" id="file_radio" required><label for="file_radio">Files</label>
+            <input type="radio" name="folder_type" value="image_folder" id="image_radio"><label for="image_radio">Images</label>
+          </fieldset>
+          <div class="small-4 columns">
+            <label> Create Folder </label>
+            <input type="submit" class="button" value="Create Folder" data-disable-with="Create Folder">
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="row" data-equalizer data-equalize-on="medium">
+  <div class="large-12 columns" style="border: 1px; box-shadow: 0 0 0 1px rgba(0,0,0,.2);">
+    <% if @image_uploaded %>
+        <a class="th" href="<%= @image_url %>">
+          <img src="<%= @image_url %>">
+        </a>
+    <% end %>
+  </div>
+</div>
+
