--- a/app/views/images/index.html.erb
+++ b/app/views/images/index.html.erb
@@ -1,3 +1,24 @@
+
+<div class="row" data-equalizer data-equalize-on="medium">
+  <div class="large-12 columns" style="border: 2px; box-shadow: 0 0 0 1px rgba(0,0,0,.2);">
+    <%= form_tag '/images', multipart: true do %>
+      <fieldset class="small-4 columns">
+        <label>Image Folder
+          <select id="folder_name" name="folder_name">
+            <% @image_folders.each do |folder| -%>
+                <option value="<%= folder %>"><%= folder.slice(0,1).capitalize + folder.slice(1..-1) %></option>
+            <% end -%>
+          </select>
+        </label>
+      </fieldset>
+      <fieldset class="small-4 columns">
+        <label> Go </label>
+        <input type="submit" value="Go" class="button" data-disable-with="Upload File">
+      </fieldset>
+    <% end %>
+  </div>
+</div>
+
 <div class="row" data-equalizer data-equalize-on="medium">
   <% @images.each do |image| -%>
     <div class="small-2 columns">
