--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,7 @@ body, html {
 body {
   margin-bottom: 6em;
   display: block;
+  background-image: url(https://thesociety.dk/images/site/bg-wood.jpg);
 }
 
 footer {
@@ -39,6 +40,7 @@ footer {
 
 .content {
   margin: 20px;
+
 }
 
 .image-name-label {
