--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,8 @@
 
     <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <%= javascript_include_tag :modernizr %>
-    <%= stylesheet_link_tag    "application" %>
+    <%= stylesheet_link_tag    :application %>
+    <%= stylesheet_link_tag    :all %>
     <%= csrf_meta_tags %>
 
     <%= render 'shared/topbar' %>
