--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,12 +23,10 @@
 
     <title><%= content_for?(:title) ? yield(:title) : "The Society" %></title>
 
-    <%= javascript_include_tag "application", 'data-turbolinks-track' => true %>
     <%= javascript_include_tag :modernizr %>
-    <%= stylesheet_link_tag    :application %>
-    <%= stylesheet_link_tag    :all %>
+    <%= stylesheet_link_tag    "application", :media => "all" %>
+    <%= javascript_include_tag "application" %>
     <%= csrf_meta_tags %>
-
     <%= render 'shared/topbar' %>
   </head>
 
