--- a/app/assets/stylesheets/thumbnails.scss
+++ b/app/assets/stylesheets/thumbnails.scss
@@ -1,3 +1,9 @@
+/*
+ *= require_tree .
+ *= require foundation_and_overrides
+ *= require_self
+ */
+
 $include-html-media-classes: $include-html-classes;
 
 // We use these to control border styles
