--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -537,7 +537,7 @@ $tab-content-padding: 1rem;
 // 33. Thumbnail
 // -------------
 
-$thumbnail-border: solid 4px rgba(#454955);
+$thumbnail-border: solid 4px #454955;
 $thumbnail-margin-bottom: $global-margin;
 $thumbnail-shadow: 0 0 0 1px rgba(#590000, 0.2);
 $thumbnail-shadow-hover: 0 0 6px 1px rgba(#8B0000, 0.5);
