--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -3,13 +3,13 @@
 
 
 <div class="row" data-equalizer data-equalize-on="medium">
-  <div class="small button-group">
-    <a class="button">Small</a>
-    <a class="button">Button</a>
-    <a class="button">Group</a>
-    <a class="button">Small</a>
-    <a class="button">Button</a>
-    <a class="button">Group</a>
+  <div class="small-12 button-group expanded">
+    <a class="button custom-button">Small</a>
+    <a class="button custom-button">Button</a>
+    <a class="button custom-button">Group</a>
+    <a class="button custom-button">Small</a>
+    <a class="button custom-button">Button</a>
+    <a class="button custom-button">Group</a>
   </div>
   <div class="small-4 columns nav-tile">
     <div class="" data-equalizer-watch>
