--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -72,6 +72,25 @@ footer {
 .nav-tile.img {
 }
 
+/* The fast way */
+.button.custom-button {
+  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+}
+
+/* Pre-render the bigger shadow, but hide it */
+.button.custom-button::after {
+  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+/* Transition to showing the bigger shadow on hover */
+.button.custom-button:hover::after {
+  opacity: 1;
+}
+
+//$thumbnail-shadow: 0 0 0 1px rgba(#590000, 0.2);
+//$thumbnail-shadow-hover: 0 0 6px 3px rgba(#EE0000, 0.5);
 
 
 
