--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,7 @@
  *= require_tree .
  *= require foundation_and_overrides
  *= require_self
+ *= require buttons
  */
 
 html {
@@ -35,7 +36,7 @@ footer {
   bottom: 0;
   width: 100%;
   height: 3em;
-  background-color: #b0b0b0;
+  background-color: #454955;
 }
 
 .content {
@@ -71,26 +72,6 @@ footer {
 
 .nav-tile.img {
 }
-
-/* The fast way */
-.button.custom-button {
-  box-shadow: 0 1px 2px rgba(0,0,0,0.15);
-}
-
-/* Pre-render the bigger shadow, but hide it */
-.button.custom-button::after {
-  box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out;
-}
-
-/* Transition to showing the bigger shadow on hover */
-.button.custom-button:hover::after {
-  opacity: 1;
-}
-
-//$thumbnail-shadow: 0 0 0 1px rgba(#590000, 0.2);
-//$thumbnail-shadow-hover: 0 0 6px 3px rgba(#EE0000, 0.5);
 
 
 
