--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,16 +1,16 @@
 
-
-
+<div class="row" data-equalizer data-equalize-on="medium">
+  <div class="small-12 custom-button-group expanded">
+    <a class="custom-button">Small</a>
+    <a class="custom-button">Button</a>
+    <a class="custom-button">Group</a>
+    <a class="custom-button">Small</a>
+    <a class="custom-button">Button</a>
+    <a class="custom-button">Group</a>
+  </div>
+</div>
 
 <div class="row" data-equalizer data-equalize-on="medium">
-  <div class="small-12 button-group expanded">
-    <a class="button custom-button">Small</a>
-    <a class="button custom-button">Button</a>
-    <a class="button custom-button">Group</a>
-    <a class="button custom-button">Small</a>
-    <a class="button custom-button">Button</a>
-    <a class="button custom-button">Group</a>
-  </div>
   <div class="small-4 columns nav-tile">
     <div class="" data-equalizer-watch>
       <a href="/images">
@@ -19,7 +19,7 @@
             <p class="text-center">Images</p>
           </div>
         </div>
-        <img class="custom-thumbnail" src="https://placehold.it/500x500.png">
+        <img class="thumbnail" src="https://placehold.it/500x500.png">
       </a>
     </div>
   </div>
@@ -31,7 +31,7 @@
             <p class="text-center">File Upload</p>
           </div>
         </div>
-        <img class="custom-thumbnail" src="https://thesociety.dk/images/site/original/file_upload.png">
+        <img class="thumbnail" src="https://placehold.it/500x500.png">
       </a>
     </div>
   </div>
@@ -42,7 +42,7 @@
           <p class="text-center">Minecraft</p>
         </div>
       </div>
-      <img class="custom-thumbnail" src="https://placehold.it/500x500.png">
+      <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
   <div class="small-4 columns nav-tile">
@@ -52,7 +52,7 @@
           <p class="text-center">Wiki</p>
         </div>
       </div>
-      <img class="custom-thumbnail" src="https://placehold.it/500x500.png">
+      <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
   <div class="small-4 columns nav-tile">
@@ -62,7 +62,7 @@
           <p class="text-center">Magic</p>
         </div>
       </div>
-      <img class="custom-thumbnail" src="https://placehold.it/500x500.png">
+      <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
   <div class="small-4 columns nav-tile">
@@ -73,7 +73,7 @@
             <p class="text-center">Subsonic</p>
           </div>
         </div>
-        <img class="custom-thumbnail" src="https://placehold.it/500x500.png">
+        <img class="thumbnail" src="https://placehold.it/500x500.png">
       </a>
     </div>
   </div>
@@ -84,7 +84,7 @@
           <p class="text-center">API</p>
         </div>
       </div>
-      <img class="custom-thumbnail" src="https://placehold.it/500x500.png">
+      <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
   <div class="small-4 columns nav-tile disabled">
@@ -94,7 +94,7 @@
           <p class="text-center">Unused</p>
         </div>
       </div>
-      <img class="custom-thumbnail" src="https://placehold.it/500x500.png">
+      <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
   <div class="small-4 columns nav-tile disabled">
@@ -104,7 +104,7 @@
           <p class="text-center">Unused</p>
         </div>
       </div>
-      <img class="custom-thumbnail" src="https://placehold.it/500x500.png">
+      <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
 </div>
