--- a/app/views/shared/_topbar.html.erb
+++ b/app/views/shared/_topbar.html.erb
@@ -8,7 +8,11 @@
   <div class="top-bar-left">
   </div>
   <div class="top-bar-middle">
-    <%= render_breadcrumbs %>
+    <div class="row" data-equalizer data-equalize-on="medium">
+      <div class="small-12">
+        <%= render_breadcrumbs %>
+      </div>
+    </div>
   </div>
   <div class="top-bar-right">
   </div>
