--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,63 +1,51 @@
-
-<div class="row" data-equalizer data-equalize-on="medium">
-  <div class="small-12 custom-button-group expanded">
-    <a class="custom-button">Small</a>
-    <a class="custom-button">Button</a>
-    <a class="custom-button">Group</a>
-    <a class="custom-button">Small</a>
-    <a class="custom-button">Button</a>
-    <a class="custom-button">Group</a>
-  </div>
-</div>
-
-<div class="row" data-equalizer data-equalize-on="medium">
-  <div class="small-4 columns nav-tile">
+<div class="row align-center">
+  <div class="small-2 columns nav-tile">
     <div class="" data-equalizer-watch>
       <a href="/images">
         <img class="thumbnail" src="https://placehold.it/500x500.png">
       </a>
     </div>
   </div>
-  <div class="small-4 columns nav-tile">
+  <div class="small-2 columns nav-tile">
     <div class="" data-equalizer-watch>
       <a href="/file_upload">
         <img class="thumbnail" src="https://placehold.it/500x500.png">
       </a>
     </div>
   </div>
-  <div class="small-4 columns nav-tile">
+  <div class="small-2 columns nav-tile">
     <div class="" data-equalizer-watch>
       <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
-  <div class="small-4 columns nav-tile">
+  <div class="small-2 columns nav-tile">
     <div class="" data-equalizer-watch>
       <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
-  <div class="small-4 columns nav-tile">
+  <div class="small-2 columns nav-tile">
     <div class="" data-equalizer-watch>
       <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
-  <div class="small-4 columns nav-tile">
+  <div class="small-2 columns nav-tile">
     <div class="" data-equalizer-watch>
       <a href="https://subsonic.thesociety.dk">
         <img class="thumbnail" src="https://placehold.it/500x500.png">
       </a>
     </div>
   </div>
-  <div class="small-4 columns nav-tile">
+  <div class="small-2 columns nav-tile">
     <div class="" data-equalizer-watch>
       <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
-  <div class="small-4 columns nav-tile disabled">
+  <div class="small-2 columns nav-tile disabled">
     <div class="" data-equalizer-watch>
       <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
   </div>
-  <div class="small-4 columns nav-tile disabled">
+  <div class="small-2 columns nav-tile disabled">
     <div class="" data-equalizer-watch>
       <img class="thumbnail" src="https://placehold.it/500x500.png">
     </div>
