--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,8 +14,9 @@
  *= require foundation_and_overrides
  *= require_self
  *= require buttons
+ *= require containers
  */
-
+/*
 html {
   position: relative;
   min-height: 100%
@@ -24,25 +25,38 @@ html {
 body, html {
   height: auto
 }
-
+*/
 body {
-  margin-bottom: 6em;
-  display: block;
-  background-image: url(https://thesociety.dk/images/site/bg-wood.jpg);
+  background-color: #0a0908;
+  //background-image: url(https://thesociety.dk/images/site/bg-wood.jpg);
 }
-
+/*
 footer {
   position: absolute;
   bottom: 0;
   width: 100%;
   height: 3em;
-  background-color: #454955;
+}
+*/
+
+@font-face {
+  font-family: "Black Chancery";
+  src: url(http://127.0.0.1/files/site/BLKCHCRY.TTF) format("truetype");
 }
 
+.black-chancery-font {
+  font-family: "Black Chancery", Verdana, Tahoma;
+}
+
+#wrapper {
+
+}
+
+/*
 .content {
   margin: 20px;
-
 }
+*/
 
 .image-name-label {
   position: absolute;
