--- a/app/views/shared/_footer.erb
+++ b/app/views/shared/_footer.erb
@@ -1,1 +1,1 @@
-<p class="text-center"> This is the footer </p>
+<div class="text-center"> This site is moderated by Sigurd Kristensen, Copyright 2017 </div>
