--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -41,7 +41,7 @@ footer {
 
 @font-face {
   font-family: "Black Chancery";
-  src: url(http://127.0.0.1/files/site/BLKCHCRY.TTF) format("truetype");
+  src: url(https://thesociety.dk/files/site/BLKCHCRY.TTF) format("truetype");
 }
 
 .black-chancery-font {
