--- a/app/views/shared/_footer.erb
+++ b/app/views/shared/_footer.erb
@@ -1,1 +1,1 @@
-<div class="text-center"> This site is moderated by Sigurd Kristensen, Copyright 2017 </div>
+<div class="text-center" style="text-align: center;"> This site is moderated by Sigurd Kristensen, Copyright 2017 </div>
