--- a/app/views/minecraft/index.html.erb
+++ b/app/views/minecraft/index.html.erb
@@ -10,9 +10,9 @@
   </thead>
   <tbody>
   <tr>
-    <% @server_info.each do |info| -%>
-        <td><%= info %>Content Goes Here</td>
-    <% end -%>
+
+        <td><%= @server_info %></td>
+
   </tr>
   </tbody>
 </table>
