--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,7 +39,7 @@ body, html {
 }
 
 .black-chancery-font {
-  font-size: large;
+  font-size: 50px;
   font-family: "Black Chancery", Verdana, Tahoma;
 }
 
