--- a/app/assets/stylesheets/containers.scss
+++ b/app/assets/stylesheets/containers.scss
@@ -12,6 +12,8 @@
 }
 
 .content-center {
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin:5px;
   border:2px solid #000000;
   background-color: #25272D;
@@ -35,6 +37,8 @@
 }
 
 .content-menu {
+  padding-top: 10px;
+  padding-bottom: 10px;
   margin: 5px;
   border: 2px solid #000000;
   background-color: #25272D;
