--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -42,14 +42,16 @@
 
         <div class="row align-center">
 
-          <div class="medium-3 columns stacked custom-button-group content-menu align-top">
-            <a class="custom-button" href="<%= ENV['SITE_URL'] %>">Main Site</a>
-            <a class="custom-button" href="<%= ENV['SITE_URL'] %>/file_upload">File Upload</a>
-            <a class="custom-button" href="<%= ENV['SITE_URL'] %>/images">Images</a>
-            <a class="custom-button" href="<%= ENV['SITE_URL'] %>/minecraft">Minecraft</a>
-            <a class="custom-button" href="https://github.com/sigurdtheone/thesociety/wiki">Wiki</a>
-            <a class="custom-button" href="#">Magic</a>
-            <a class="custom-button" href="https://subsonic.thesociety.dk">Subsonic</a>
+          <div class="medium-3 columns stacked align-top">
+            <div class="custom-button-group content-menu">
+              <a class="custom-button" href="<%= ENV['SITE_URL'] %>">Main Site</a>
+              <a class="custom-button" href="<%= ENV['SITE_URL'] %>/file_upload">File Upload</a>
+              <a class="custom-button" href="<%= ENV['SITE_URL'] %>/images">Images</a>
+              <a class="custom-button" href="<%= ENV['SITE_URL'] %>/minecraft">Minecraft</a>
+              <a class="custom-button" href="https://github.com/sigurdtheone/thesociety/wiki">Wiki</a>
+              <a class="custom-button" href="#">Magic</a>
+              <a class="custom-button" href="https://subsonic.thesociety.dk">Subsonic</a>
+            </div>
           </div>
 
           <div class="medium-12 columns content-center">
