tweak url for font

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -36,7 +36,8 @@ body, html {
 
 @font-face {
   font-family: "Black Chancery";
-  src: url(https://thesociety.dk/files/site/BLKCHCRY.TTF) format("truetype");
+/*  src: url(https://thesociety.dk/files/site/BLKCHCRY.TTF) format("truetype"); */
+  src: url(https://beta.thesociety.dk/files/site/BLKCHCRY.TTF) format("truetype");
 }
 
 .black-chancery-font {
