--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,6 +47,7 @@
               <a class="custom-button" href="<%= ENV['SITE_URL'] %>">Main Site</a>
               <a class="custom-button" href="<%= ENV['SITE_URL'] %>/file_upload">File Upload</a>
               <a class="custom-button" href="<%= ENV['SITE_URL'] %>/images">Images</a>
+              <a class="custom-button" href="<%= ENV['SITE_URL'] %>/webms">Webms</a>
               <a class="custom-button" href="<%= ENV['SITE_URL'] %>/minecraft">Minecraft</a>
               <a class="custom-button" href="https://github.com/sigurdtheone/thesociety/wiki">Wiki</a>
               <a class="custom-button" href="#">Magic</a>
