--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -29,7 +29,7 @@
 @include foundation-dropdown;
 @include foundation-dropdown-menu;
 //@include foundation-flex-video;
-@include foundation-label;
+//@include foundation-label;
 //@include foundation-media-object;
 //@include foundation-menu;
 //@include foundation-menu-icon;
