--- a/app/views/webms/index.html.erb
+++ b/app/views/webms/index.html.erb
@@ -2,7 +2,7 @@
 <div class="row align-justify">
   <div class="medium-6 columns">
     <select id="folder_name" name="folder_name">
-      <% @image_folders.each do |folder| -%>
+      <% @webm_folders.each do |folder| -%>
           <option value="<%= folder %>"><%= folder.slice(0,1).capitalize + folder.slice(1..-1) %></option>
       <% end -%>
     </select>
@@ -14,11 +14,11 @@
 <% end %>
 
 <div class="row" data-equalizer data-equalize-on="medium">
-  <% @images.each do |image| -%>
+  <% @webms.each do |webm| -%>
     <div class="medium-4 columns">
       <div class="" data-equalizer-watch>
-        <a href="<%= "images/#{@folder}/original/#{image}" %>">
-          <img class="thumbnail" src="<%= "images/#{@folder}/thumbs/tmb_#{image}" %>" height="100">
+        <a href="<%= "webms/#{@folder}/original/#{webm}" %>">
+          <img class="thumbnail" src="<%= "webms/#{@folder}/thumbs/tmb_#{webm}" %>" height="100">
         </a>
       </div>
     </div>
